--- a/v1/pubspec.yaml
+++ b/v1/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   hive: ^2.1.0
   hive_flutter: ^1.1.0
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
