--- a/v1/pubspec.yaml
+++ b/v1/pubspec.yaml
@@ -91,5 +91,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
   assets:
-    - assets/
+    - assets/image/Icon-192.png
